# VayuAI

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
docs/en/datasets/: argoverse.md  brain-tumor.md  coco-pose.md  coco.md  dota.md  imagenet.md  index.md  lvis.md  objects365.md  open_images_v7.md  sardet_100k.md  visdrone.md  voc.md  xview.md
docs/en/guides/: analytics.md  distance-calculation.md  heatmap.md  hyperparameter-tuning.md  instance-segmentation-and-tracking.md  isolating-segmentation-objects.md  model-deployment-options.md  model-deployment-practices.md  object-blurring.md  object-counting.md  object-cropping.md  parking-management.md  queue-management.md  region-counting.md  security-alarm-system.md  speed-estimation.md  trackzone.md  visioneye.md  workout-monitoring.md
docs/en/integrations/: coreml.md  executorch.md  index.md  onnx.md  openvino.md  paddlepaddle.md  tensorrt.md  tf-graphdef.md  tf-savedmodel.md  tfjs.md  tflite.md  torchscript.md
docs/en/macros/: augmentation-args.md  export-args.md  export-table.md  predict-args.md  solution-args.md  track-args.md  train_args.md  vajrav1-det-perf.md  vajrav1-pose-perf.md  vajrav1-seg-perf.md  validation-args.md
docs/en/models/: vajrav1.md  vajrav1_vs_yolo.md
docs/en/modes/: benchmark.md  export.md  index.md  predict.md  track.md  train.md  val.md
docs/en/solutions/: index.md
docs/en/tasks/: classify.md  detect.md  index.md  obb.md  pose.md  segment.md  small_obj_detect.md
tests/: __init__.py  test_cli.py  test_core.py  test_cuda.py  test_exports.py  test_python.py
vajra/: __init__.py
vajra/callbacks/: __init__.py  base.py  clearml.py  comet.py  dvc.py  mlflow.py  neptune.py  raytune.py  tensorboard.py  wb.py
vajra/checks/: __init__.py
vajra/configs/: __init__.py
vajra/configs/datasets/: Argoverse.yaml  DOTAv1.5.yaml  DOTAv1.yaml  (+22 more)
vajra/core/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
vajra/dataset/: __init__.py  annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split_dota.py  utils.py
vajra/distributed/: __init__.py
vajra/examples/: coco_training.py  dota_split.py  hyperparam_tuning.py  imagenet_training.py  obb_large_train.py  obb_train_dota.py  scale_manual_tuning.py
vajra/instances/: __init__.py
vajra/loss/: __init__.py
vajra/manager/: __init__.py
vajra/metrics/: __init__.py
vajra/models/: __init__.py
vajra/new_optimizers/: __init__.py  ademamix.py  ademamix_shampoo.py  adopt.py  lion.py
vajra/nn/: attention_utils.py  backend.py  head.py  modules.py  text_model.py  transformer.py  utils.py  vajra.py  vajrav2.py  vajrav3.py  window_attention.py
vajra/ops/: __init__.py  bbox_segment_ops.py
vajra/plotting/: __init__.py
vajra/solutions/: __init__.py  aigym.py  analytics.py  config.py  depth_estimation.py  distance_calculation.py  heatmap.py  instance_segmentation.py  object_blurrer.py  object_counter.py  object_cropper.py  parking_management.py  queue_management.py  region_counter.py  security_alarm.py  solutions.py  speed_estimation.py  streamlit_inference.py  trackzone.py  vision_eye.py
vajra/tal/: anchor_generator.py  assigner_utils.py  tal_assigner.py
vajra/trackers/: __init__.py  basetrack.py  bot_sort.py  byte_tracker.py  track.py
vajra/utils/: __init__.py  autobatch.py  benchmarks.py  dfine_ops.py  downloads.py  files.py  torch_utils.py  triton.py  tuner.py
(+115 files in other folders)
